# visible

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
.github/actions/setup-rust/: action.yml
.github/workflows/: android.yml  ci.yml  ios.yml  macos.yml  release-android.yml  release-macos.yml
visible-android/: settings.gradle.kts
visible-android/app/: build.gradle.kts
visible-android/app/src/androidTest/java/fm/bae/visible/ui/: SearchNavigationTest.kt
visible-android/app/src/main/: AndroidManifest.xml
visible-android/app/src/main/java/fm/bae/visible/: AppSession.kt  MainActivity.kt  VisibleApp.kt
visible-android/app/src/main/java/fm/bae/visible/ui/: AppRoot.kt  BridgeWrite.kt  BrowseScreen.kt  BrowseViewModel.kt  CameraCapture.kt  ChildCard.kt  CodeBlock.kt  Dialogs.kt  FullScreenImage.kt  ImagePath.kt  LibraryPick.kt  MovePickerScreen.kt  MovePickerViewModel.kt  NodeActionsMenu.kt  NodeDetailLogic.kt  NodeDetailScreen.kt  NodeDetailViewModel.kt  NodeDisplay.kt  NodeImage.kt  NodeName.kt  SearchScreen.kt  SearchViewModel.kt  SectionColumn.kt  SettingsLogic.kt  SettingsScreen.kt  SettingsViewModel.kt  ShareActions.kt  SharingLogic.kt  SharingScreen.kt  SharingViewModel.kt  TasksScreen.kt  TasksViewModel.kt  VisibleTheme.kt  WelcomeScreen.kt  WelcomeViewModel.kt
visible-android/app/src/main/java/io/crates/keyring/: Keyring.kt
visible-android/app/src/main/res/values/: themes.xml
visible-android/app/src/main/res/values-night/: themes.xml
visible-android/app/src/main/res/xml/: file_paths.xml
visible-android/app/src/test/java/fm/bae/visible/: AppSessionTest.kt
visible-android/app/src/test/java/fm/bae/visible/ui/: NodeDetailLogicTest.kt  SettingsLogicTest.kt  SharingLogicTest.kt
visible-bridge/: Cargo.toml  build-android.sh  build-ios.sh  build-macos.sh
visible-bridge/src/: handle.rs  init.rs  lib.rs  setup.rs  types.rs
visible-core/: Cargo.toml
visible-core/src/: app.rs  blob_plan.rs  config.rs  error.rs  lib.rs  library.rs  node.rs  paths.rs  share.rs  sync.rs  task.rs
visible-core/tests/: inventory.rs  library.rs  tasks.rs
visible-ios/visible/: project.yml
visible-ios/visible/visible/: AppRootView.swift  AppSession.swift  Brand.swift  BridgeNode+DisplayName.swift  BridgeWrite.swift  BrowseModel.swift  BrowseView.swift  CameraView.swift  ChildCard.swift  CodeRow.swift  DeleteConfirmSheet.swift  FullScreenImageView.swift  ImageLoader.swift  ImagePath.swift  Info.plist  Logger.swift  MovePickerModel.swift  MovePickerView.swift  NameSheet.swift  NodeActionsMenu.swift  NodeDetailLogic.swift  NodeDetailModel.swift  NodeDetailView.swift  NodeImageView.swift  NodeName.swift  PhotoLibraryPicker.swift  RemovePhotoConfirmSheet.swift  SearchModel.swift  SearchView.swift  SettingsLogic.swift  SettingsModel.swift  SettingsView.swift  ShareActions.swift  SharingLogic.swift  SharingModel.swift  SharingView.swift  TasksModel.swift  TasksView.swift  Theme.swift  View+PlatformChrome.swift  (+3 more)
visible-macos/: run.sh
visible-macos/visible/: Signing.xcconfig  project.yml
visible-macos/visible/visible/: Info.plist  visible.entitlements
visible-macos/visible/visible/Tests/: NodeDetailLogicTests.swift  SettingsLogicTests.swift  SharingLogicTests.swift
