[workspace]
members = ["visible-core", "visible-bridge"]
resolver = "2"

[workspace.dependencies]
tracing = "0.1.41"

[profile.release]
lto = true
codegen-units = 1
strip = true
split-debuginfo = "packed"
debug = "line-tables-only"

# Fork carrying two Swift template fixes uniffi 0.31 lacks:
# - `nonisolated(unsafe)` on callback `vtablePtr` for Swift 6 strict concurrency
# - Swift `Task.cancel()` propagation through `withTaskCancellationHandler` into
#   Rust drop
# The branch is based on the v0.31.1 tag (not mozilla/main HEAD) so its manifest
# version matches what the resolver picks for uniffi 0.31.
[patch.crates-io]
uniffi = { git = "https://github.com/bae-fm/uniffi-rs", branch = "bae-swift-cancel" }
uniffi_bindgen = { git = "https://github.com/bae-fm/uniffi-rs", branch = "bae-swift-cancel" }
uniffi_core = { git = "https://github.com/bae-fm/uniffi-rs", branch = "bae-swift-cancel" }
uniffi_internal_macros = { git = "https://github.com/bae-fm/uniffi-rs", branch = "bae-swift-cancel" }
uniffi_macros = { git = "https://github.com/bae-fm/uniffi-rs", branch = "bae-swift-cancel" }

uniffi_meta = { git = "https://github.com/bae-fm/uniffi-rs", branch = "bae-swift-cancel" }
uniffi_pipeline = { git = "https://github.com/bae-fm/uniffi-rs", branch = "bae-swift-cancel" }
uniffi_udl = { git = "https://github.com/bae-fm/uniffi-rs", branch = "bae-swift-cancel" }
