[package]
name = "visible-bridge"
version = "0.1.0"
edition = "2021"

[lib]
name = "visible_bridge"
crate-type = ["lib", "staticlib", "cdylib"]

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[dependencies]
visible-core = { path = "../visible-core" }
uniffi = { version = "0.31", features = ["cli"] }
tokio = { version = "1.0", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"

[target.'cfg(target_os = "macos")'.dependencies]
tracing-oslog = "0.3"

[target.'cfg(target_os = "ios")'.dependencies]
tracing-oslog = "0.3"

[target.'cfg(target_os = "android")'.dependencies]
tracing-android = "0.2"
