[package]
name = "visible-core"
version = "0.0.0-dev"
edition = "2021"

[lib]
name = "visible_core"
path = "src/lib.rs"

[dependencies]
coven = { git = "https://github.com/bae-fm/coven", rev = "8b4e03d5ea3fcf25b8bbb93e5f207623a037c4a0" }
serde_yaml = "0.9"
tokio = { version = "1.0", features = ["full"] }
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4"] }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3.8"
tokio = { version = "1.0", features = ["test-util"] }
# coven's deterministic id fake for visible-core's tests (off in production builds).
coven = { git = "https://github.com/bae-fm/coven", rev = "8b4e03d5ea3fcf25b8bbb93e5f207623a037c4a0", features = ["test-utils"] }
