[package]
name = "visible-core"
version = "0.0.0-dev"
edition = "2021"

[lib]
name = "visible_core"
path = "src/lib.rs"

[features]
# Exposes the in-memory test keyring (`config::install_test_keyring`) and
# forwards coven's deterministic id/clock fakes, for tests of crates that build
# on visible-core. visible-core's own unit/integration tests reach the fakes
# through the dev-dependency on coven, which already enables `coven/test-utils`.
test-utils = ["coven/test-utils"]

[dependencies]
coven = { git = "https://github.com/bae-fm/coven", rev = "8b4e03d5ea3fcf25b8bbb93e5f207623a037c4a0" }
serde_yaml = "0.9"
tokio = { version = "1.0", features = ["full"] }
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4"] }
# Cloud-sync identity + per-library encryption key live in the OS keyring; coven
# reads/writes them through keyring-core, so the host installs the same store and
# version coven pins (a second keyring-core would split the process-global store).
keyring-core = "0.7"
# Hex-encode the encryption key fingerprint coven returns as the config hint.
hex = "0.4"
tracing = { workspace = true }

# The native keyring stores are platform mechanisms: Apple's protected keychain
# (macOS + iOS) and the Android keystore. Matched to coven's versions so the
# store coven reads is the one the host installs.
[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
apple-native-keyring-store = { version = "0.2", features = ["protected"] }

[target.'cfg(target_os = "android")'.dependencies]
android-native-keyring-store = "0.5"

[dev-dependencies]
tempfile = "3.8"
tokio = { version = "1.0", features = ["test-util"] }
# Construct the fixed clock instant coven's FixedClock takes in tests.
chrono = "0.4"
# coven's deterministic id fake + test keyring/clock fakes for visible-core's
# tests (off in production builds).
coven = { git = "https://github.com/bae-fm/coven", rev = "8b4e03d5ea3fcf25b8bbb93e5f207623a037c4a0", features = ["test-utils"] }
